thêm allure cho báo cáo
